fix: ignore workflows, hooks and self in pre-commit secret check

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "bot": "node bot/bot.js",
     "selfbot": "node selfbot/selfbot.js",
     "check-secrets": "node scripts/check-secrets.js",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start:pm2": "npx pm2 start ecosystem.config.js --only dcautobot",
+    "stop:pm2": "npx pm2 stop dcautobot || true",
+    "restart:pm2": "npx pm2 restart dcautobot || npx pm2 start ecosystem.config.js --only dcautobot"
   },
   "keywords": [
     "discord",
@@ -27,6 +30,7 @@
   }
   ,
   "devDependencies": {
-    "husky": "^8.0.0"
+    "husky": "^8.0.0",
+    "pm2": "^5.2.0"
   }
 }
