ci: use detect-secrets action; add pm2 ecosystem

--- a/.github/workflows/secret-scan.yml
+++ b/.github/workflows/secret-scan.yml
@@ -21,13 +21,14 @@ jobs:
       - name: Run check-secrets (node script)
         run: npm run check-secrets
 
-  gitleaks-scan:
-    name: Gitleaks secret scan
+  detect-secrets-scan:
+    name: Detect Secrets (Yelp/detect-secrets)
     runs-on: ubuntu-latest
     needs: node-check
     steps:
       - uses: actions/checkout@v4
-      - name: Run gitleaks
-        uses: zricethezav/gitleaks-action@v8
+      - name: Run detect-secrets action
+        uses: Yelp/detect-secrets-action@v1
         with:
-          args: '--path=. --redact'
+          # run on all files in the repository for PRs and pushes
+          args: '--all-files'
